# Horologion

./: .gitignore  Cargo.toml  LICENSE  README-ZH.md  README.md  components.json  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: pr-check-by-build.yml  pr_agent.yml
scripts/: build-listener-sidecar.mjs
src/: App.css  App.tsx
src-config/: Cargo.toml
src-config/src/: lib.rs
src-db/: Cargo.toml
src-db/_src/: config.rs  connection.rs
src-db/src/: api.rs  db.rs  error.rs  errors.rs  lib.rs  models.rs  operations.rs  schema.rs
src-db/src/_db/: config.rs  connection.rs  mod.rs  paths.rs  settings.rs
src-db/src/api/: common.rs  input.rs  window.rs
src-db/src/db/: config.rs  connect.rs  path.rs
src-db/src/models/: listener.rs  schema.rs  schema.sql
src-listener/: Cargo.toml
src-listener/src/: main.rs  monitor.rs  permissions.rs  window.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  commands.rs  core.rs  lib.rs  main.rs  server.rs
src-tauri/src/core/: input_monitor.rs
src-tauri/src/listener/: event_listener.rs  main.rs  monitor.rs  window.rs
src-tauri/src/server/: events.rs  router.rs  settings.rs  windows.rs
src/app/: router.tsx
src/components/app/: AppShell.tsx  PaginationControls.tsx  i18n.ts
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  separator.tsx  table.tsx
src/lib/: api.ts  format.ts  i18n.ts  mock-api.ts  theme.tsx
src/lib/i18n/: common.ts  types.ts
src/pages/events/: EventsPage.tsx  i18n.ts
src/pages/overview/: OverviewPage.tsx  i18n.ts
src/pages/settings/: SettingsPage.tsx  i18n.ts
src/pages/windows/: WindowsPage.tsx  i18n.ts
