[workspace]
resolver = "3"
members = [
    "src-listener",
    "src-tauri",
    "src-db",
    "src-config"
]

[workspace.dependencies]
# 共享依赖版本管理
duckdb = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
dotenvy = "0.15"
thiserror = "1.0"
dirs = "5.0"
