[package]
name = "database"
version = "0.0.1"
edition = "2021"

[dependencies]
duckdb = { version = "1.4", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
thiserror = "1.0"
dirs = "5.0"
toml = "0.8"
tokio = { version = "1", features = ["full"], optional = true }

[features]
default = []
async = ["tokio"]
