[package]
name = "listener"
version = "0.0.1"
edition = "2021"

[dependencies]
rdev = { git = "https://github.com/Narsil/rdev.git", rev = "3d0ec1d3bb106e889466e20bd83b273e66066cc4" }
log = "0.4"
env_logger = "0.10"
fern = "0.7"
active-win-pos-rs = "0.9"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
database = { path = "../src-db"}
dirs = "5.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-foundation-sys = "0.8"
