[package]
name = "horologion"
version = "0.0.1"
description = "Horologion"
authors = ["feuclalman@gmail.com"]
edition = "2021"
# 默认从主程序启动
default-run = "horologion"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "horologion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
# 主进程
name = "horologion"
path = "src/main.rs"

[[bin]]
# 子进程，用于监听键鼠事件
# 在 src-tauri 下运行 `cargo run --bin listener` 可以仅启动监听进程
name = "listener"
path = "src/listener/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = "0.4"
log = "0.4"
env_logger = "0.10"

